Changed website to fit our needs a bit more

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ language: 'en'
 baseurl: /hfhwebsite/
 
 # Website info
-title: Ghost
-description: The professional publishing platform
+title: Hack for Houston
+description: An organization aimed to link the computer science talent of Rice University with non-profits in the Houston area seeking programming services.
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
@@ -22,7 +22,7 @@ navigation: True # show the navbar links
 subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: hackforhouston # replace by your username
+twitter: False # replace by your username
 facebook: hackforhouston # replace by your username
 
 # Disqus
