Created signup and removed about page

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,7 @@ hackforhouston:
 kyran:
   username: kyran
   name: Kyran Adams
-  location: Houston, TX
+  location: Baker, '21
   url_full: https://github.com/kyranstar
   url: github.com/kyranstar
   bio: Kyran is the 2018 president of Hack for Houston.
