--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 markdown: kramdown
 highlighter: rouge
-paginate: 5 # it will paginate after this number
+paginate: 20 # it will paginate after this number
 language: 'en'
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
@@ -24,6 +24,7 @@ subscribers: False # you need to connect an external service for this to work,
 # by editing `_includes/subscribe-form.html`
 twitter: False # replace by your username
 facebook: hackforhouston # replace by your username
+github: hack-for-houston
 
 # Disqus
 disqus: False
